feat: add styles in FAQ block on tablet + tests

--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -4,7 +4,7 @@
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    padding: 50px 45px;
+    padding: 50px 45px 83px 45px;
   }
 
   @media (min-width: $desktop-width-min) {
