--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -3,7 +3,9 @@
     padding: 50px 15px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {}
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    padding: 50px 45px;
+  }
 
   @media (min-width: $desktop-width-min) {}
 }
@@ -36,7 +38,11 @@
     line-height: 20px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {}
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    margin-bottom: 40px;
+    font-size: 34px;
+    line-height: 50px;
+  }
 
   @media (min-width: $desktop-width-min) {}
 }
@@ -61,7 +67,10 @@
     padding: 20px 15px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {}
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: $tablet-content-width;
+    padding: 29px 30px 31px 30px;
+  }
 
   @media (min-width: $desktop-width-min) {}
 
@@ -76,9 +85,28 @@
       line-height: 20px;
     }
 
-    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {}
+    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+      font-size: 16px;
+      line-height: 20px;
+    }
 
     @media (min-width: $desktop-width-min) {}
+  }
+
+  br {
+    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+      display: none;
+    }
+  }
+
+  br:nth-child(2) {
+    @media (max-width: $mobile-width-max) {
+      display: none;
+    }
+
+    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+      display: block;
+    }
   }
 }
 
@@ -93,7 +121,11 @@
     line-height: 18px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {}
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: 500px;
+    font-size: 22px;
+    line-height: 26px;
+  }
 
   @media (min-width: $desktop-width-min) {}
 }
@@ -105,6 +137,10 @@
   background-color: $accent-color;
   border: 1px solid $accent-color;
   border-radius: 50%;
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    align-self: flex-start;
+  }
 
   &::after,
   &::before {
