--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,4 +19,5 @@
 @import "blocks/hero.scss";
 @import "blocks/news.scss";
 @import "blocks/programs.scss";
+@import "blocks/reviews.scss";
 @import "blocks/faq.scss";
