--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -7,25 +7,27 @@
     padding: 50px 0;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    padding: 65px 100px 60px 100px;
+  }
+
 }
 
 .reviews__main-wrapper {
+  position: relative; // для кнопок навигации слайдера + скроллбар
   margin: 0 auto;
 
   @media (max-width: $mobile-width-max) {
-    position: relative; // для кнопок навигации слайдера
     width: $mobile-content-width;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    position: relative;
     margin-left: 45px;
     width: calc($tablet-width-min - 45px);
   }
 
   @media (min-width: $desktop-width-min) {
-    width: $desktop-width-min;
+    width: $desktop-content-width;
   }
 }
 
@@ -46,16 +48,19 @@
     line-height: 50px;
   }
 
-  @media (min-width: $desktop-width-min) {}
-}
-
-.reviews__swiper {
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    margin-bottom: 62px;
+  @media (min-width: $desktop-width-min) {
+    margin-bottom: 45px;
+    margin-left: 3px;
+    font-size: 50px;
+    line-height: 50px;
   }
 }
 
-.reviews__swiper-wrapper {}
+.reviews__swiper {
+  @media (min-width: $tablet-width-min) {
+    margin-bottom: 62px;
+  }
+}
 
 .reviews__slide.swiper-slide {
   @media (max-width: $mobile-width-max) {
@@ -65,24 +70,40 @@
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     height: 417px;
   }
+
+  @media (min-width: $desktop-width-min) {
+    height: 483px;
+  }
 }
 
 .reviews__slide-content-wrapper {
   border: 2px solid $accent-color;
   border-radius: 16px;
 
-  @include flex(row, space-between, center);
-  flex-wrap: wrap;
-  gap: 10px;
-
   @media (max-width: $mobile-width-max) {
+    @include flex(row, space-between, center);
+    flex-wrap: wrap;
+    gap: 10px;
+
     padding: 30px 15px;
     height: 472px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    padding: 40px 50px;
+  @media (min-width: $tablet-width-min) {
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-columns: repeat(2, min-content);
+    grid-template-rows: repeat(3, min-content);
+    row-gap: 25px;
+
+    padding: 50px;
     height: 417px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    column-gap: 80px;
+    height: 483px;
   }
 
   blockquote {
@@ -93,21 +114,27 @@
       line-height: 20px;
     }
 
-    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    @media (min-width: $tablet-width-min) {
+      grid-column: 1 / 3;
       font-size: 16px;
       line-height: 20px;
+    }
+
+    @media (min-width: $desktop-width-min) {
+      line-height: 26px
     }
   }
 }
 
 .reviews__author-wrapper {
-  @include flex(row, space-between, center);
+  @include flex(row, flex-start, center);
 
   @media (max-width: $mobile-width-max) {
     gap: 10px;
+    margin-bottom: 5px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     gap: 15px;
   }
 }
@@ -116,12 +143,11 @@
   border-radius: 50%;
 
   @media (max-width: $mobile-width-max) {
-    margin-bottom: 5px;
     width: 60px;
     height: 60px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     width: 90px;
     height: 90px;
   }
@@ -144,19 +170,21 @@
     line-height: 18px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    width: 54px;
+  @media (min-width: $tablet-width-min) {
+    width: 90px;
     font-size: 20px;
     line-height: 24px;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    font-size: 18px;
+  }
 
 }
 
 .reviews__details {
   display: grid;
-  grid-template-columns: repeat(2, max-width);
+  grid-template-columns: repeat(2, max-content);
   column-gap: 25px;
   margin: 0;
 
@@ -169,6 +197,11 @@
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     row-gap: 10px;
     width: 230px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    row-gap: 10px;
+    align-self: center;
   }
 }
 
@@ -188,11 +221,6 @@
   font-size: 12px;
   line-height: 12px;
   letter-spacing: 0.12px;
-
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {}
-
-  @media (min-width: $desktop-width-min) {}
-
 }
 
 .reviews__details-info {
@@ -207,6 +235,11 @@
     font-size: 14px;
     line-height: 20px;
   }
+
+  @media (min-width: $desktop-width-min) {
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
 
 .reviews__slide-subtitle {
@@ -220,10 +253,16 @@
     line-height: 18px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    margin-bottom: -5px;
+  @media (min-width: $tablet-width-min) {
+    grid-column: 1 /3;
+    margin-top: 5px;
     font-size: 20px;
     line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    font-size: 24px;
+    line-height: 26px;
   }
 }
 
@@ -242,6 +281,12 @@
     right: 45px;
     width: 54px;
   }
+
+  @media (min-width: $desktop-width-min) {
+    bottom: -64px;
+    right: 0px;
+    width: 54px;
+  }
 }
 
 .reviews__buttons-wrapper .swiper-button-prev,
@@ -250,10 +295,13 @@
 }
 
 // скроллбар
-.reviews__scrollbar {}
-
-
 .reviews__scrollbar.swiper-horizontal>.swiper-scrollbar,
 .reviews__scrollbar.swiper-scrollbar.swiper-scrollbar-horizontal {
-  bottom: -51px;
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    bottom: -51px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    bottom: -53px;
+  }
 }
