feat: add graphics and styles for contacts block on mobile, tablet, desktop + tests

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,11 +13,12 @@
 @import "blocks/button.scss";
 @import "blocks/button-arrow.scss";
 @import "blocks/arrow.scss";
-@import "blocks/about.scss";
-@import "blocks/grant.scss";
 @import "blocks/header.scss";
 @import "blocks/hero.scss";
-@import "blocks/news.scss";
+@import "blocks/about.scss";
+@import "blocks/grant.scss";
 @import "blocks/programs.scss";
-@import "blocks/reviews.scss";
+@import "blocks/news.scss";
 @import "blocks/faq.scss";
+@import "blocks/reviews.scss";
+@import "blocks/contacts.scss";
