feat: add styles in form block on mobile + tests

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -79,3 +79,17 @@
 .button--secondary {
   background-color: transparent;
 }
+
+.button--secondary-light {
+  background-color: transparent;
+  border-color: $basic-light-color;
+  color: $basic-light-color;
+
+  &::after {
+    background-color: $basic-light-color;
+  }
+
+  &::before {
+    background-color: $accent-color;
+  }
+}
