--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -7,10 +7,14 @@
     padding: 51px 58px;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    padding: 60px 100px;
+  }
 }
 
 .form__main-wrapper {
+  background-repeat: no-repeat;
+
   @media (max-width: $mobile-width-max) {
     padding: 43px 10px 40px;
     background-image:
@@ -18,7 +22,6 @@
         url("../../img/form/form-background-mobile@2x.webp") type("image/webp") 2x,
         url("../../img/form/form-background-mobile@1x.jpg") type("image/jpg") 1x,
         url("../../img/form/form-background-mobile@2x.jpg") type("image/jpg") 2x);
-    background-repeat: no-repeat;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
@@ -28,10 +31,16 @@
         url("../../img/form/form-background-tablet@2x.webp") type("image/webp") 2x,
         url("../../img/form/form-background-tablet@1x.jpg") type("image/jpg") 1x,
         url("../../img/form/form-background-tablet@2x.jpg") type("image/jpg") 2x);
-    background-repeat: no-repeat;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    border-radius: 16px;
+    background-image:
+      image-set(url("../../img/form/form-background-desktop@1x.webp") type("image/webp") 1x,
+        url("../../img/form/form-background-desktop@2x.webp") type("image/webp") 2x,
+        url("../../img/form/form-background-desktop@1x.jpg") type("image/jpg") 1x,
+        url("../../img/form/form-background-desktop@2x.jpg") type("image/jpg") 2x);
+  }
 }
 
 .form__form {
@@ -51,7 +60,10 @@
     width: 442px;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    padding: 44px 70px 40px;
+    width: 490px;
+  }
 }
 
 .form__title {
@@ -69,7 +81,11 @@
     line-height: 28px;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    margin-bottom: 24px;
+    font-size: 32px;
+    line-height: 36px;
+  }
 }
 
 .form__description {
@@ -82,51 +98,46 @@
     line-height: 20px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     margin-bottom: 30px;
     font-size: 16px;
     line-height: 20px;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    line-height: 26px;
+  }
 }
 
 .form__label {
+  margin-bottom: 2px;
   color: rgba(240, 239, 233, 0.8);
 
   @media (max-width: $mobile-width-max) {
-    margin-bottom: 2px;
     font-size: 12px;
     line-height: 14px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    margin-bottom: 2px;
     font-size: 14px;
     line-height: 20px;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
 
 .form__input {
+  margin-bottom: 10px;
+  padding: 17px;
+  width: 100%;
+  height: 50px;
+  color: $basic-light-color;
   border-radius: 8px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: transparent;
-  color: $basic-light-color;
-  width: 100%;
-  padding: 17px;
-  height: 50px;
-
-  @media (max-width: $mobile-width-max) {
-    margin-bottom: 10px;
-  }
-
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    margin-bottom: 10px;
-  }
-
-  @media (min-width: $desktop-width-min) {}
 }
 
 .form__input--message {
@@ -136,6 +147,10 @@
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     height: 88px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    height: 90px;
   }
 }
 
@@ -149,16 +164,12 @@
 }
 
 .form__input--city {
+  height: 52px;
+  padding: 16px 17px;
+
   @media (max-width: $mobile-width-max) {
     width: 260px;
-    padding: 16px 17px;
   }
-
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    padding: 16px 17px;
-  }
-
-  // display: none;
 }
 
 .form__custom-select {
@@ -177,7 +188,7 @@
   position: relative;
   margin-left: 30px;
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     margin-top: 4px;
     font-size: 12px;
     line-height: 12px;
@@ -204,6 +215,10 @@
     @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
       top: -4px;
     }
+
+    @media (min-width: $desktop-width-min) {
+      top: -3px;
+    }
   }
 
   &::after {
@@ -219,7 +234,7 @@
     mask-size: 10px 8px;
     mask-repeat: no-repeat;
 
-    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    @media (min-width: $tablet-width-min) {
       top: 2px;
       left: -25px;
     }
@@ -248,5 +263,9 @@
     padding-left: 108px;
   }
 
-  @media (min-width: $desktop-width-min) {}
+  @media (min-width: $desktop-width-min) {
+    margin-top: 32px;
+    width: 100%;
+    padding-left: 107px;
+  }
 }
