--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import "blocks/button.scss";
 @import "blocks/button-arrow.scss";
 @import "blocks/arrow.scss";
+@import "blocks/social-list.scss";
 @import "blocks/header.scss";
 @import "blocks/hero.scss";
 @import "blocks/about.scss";
@@ -23,3 +24,5 @@
 @import "blocks/reviews.scss";
 @import "blocks/contacts.scss";
 @import "blocks/form.scss";
+@import "blocks/footer.scss";
+
