--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -14,6 +14,11 @@
 background-color: $accent-color;
 border-radius: 50%;
 
+@media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  width: 36px;
+  height: 36px;
+}
+
   &::before {
     content: "";
     display: block;
@@ -59,14 +64,26 @@ border-radius: 50%;
 .social-list__link--vk::before {
   mask-image: url("/__spritemap#sprite-vk-icon-view");
   mask-size: 12px 6px;
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    mask-size: 16px 9px;
+  }
 }
 
 .social-list__link--ok::before {
   mask-image: url("/__spritemap#sprite-ok-icon-view");
   mask-size: 7px 12px;
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    mask-size: 10px 16px;
+  }
 }
 
 .social-list__link--reddit::before {
   mask-image: url("/__spritemap#sprite-reddit-icon-view");
   mask-size: 11px 11px;
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    mask-size: 15px 15px;
+  }
 }
