--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -4,6 +4,10 @@
  @include flex(row, space-between, center);
   flex-wrap: wrap;
   gap: 10px;
+
+  @media (min-width: $desktop-width-min) {
+    gap: 20px;
+  }
 }
 
 .social-list__link {
@@ -14,7 +18,7 @@
 background-color: $accent-color;
 border-radius: 50%;
 
-@media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+@media (min-width: $tablet-width-min) {
   width: 36px;
   height: 36px;
 }
@@ -65,7 +69,7 @@ border-radius: 50%;
   mask-image: url("/__spritemap#sprite-vk-icon-view");
   mask-size: 12px 6px;
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     mask-size: 16px 9px;
   }
 }
@@ -74,7 +78,7 @@ border-radius: 50%;
   mask-image: url("/__spritemap#sprite-ok-icon-view");
   mask-size: 7px 12px;
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     mask-size: 10px 16px;
   }
 }
@@ -83,7 +87,7 @@ border-radius: 50%;
   mask-image: url("/__spritemap#sprite-reddit-icon-view");
   mask-size: 11px 11px;
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     mask-size: 15px 15px;
   }
 }
