feat: add modal (all breakpoints) + JS + PP

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,6 +14,9 @@
 @import "blocks/button-arrow.scss";
 @import "blocks/arrow.scss";
 @import "blocks/social-list.scss";
+@import "blocks/modal.scss";
+@import "blocks/overlay.scss";
+@import "blocks/page-body.scss";
 @import "blocks/header.scss";
 @import "blocks/hero.scss";
 @import "blocks/about.scss";
