--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -197,6 +197,11 @@
   position: relative;
   margin-left: 30px;
 
+  @media (max-width: $mobile-width-max) {
+    font-size: 12px;
+    line-height: 14px;
+  }
+
   @media (min-width: $tablet-width-min) {
     margin-top: 4px;
     font-size: 12px;
