--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -72,12 +72,77 @@
   }
 }
 
+.button:focus::before {
+  transform: rotate(45deg);
+}
+
+.button:disabled,
+.button-disabled {
+  color: $disabled-color;
+  border-color: $disabled-color;
+
+  &::after {
+    background-color: $disabled-color;
+  }
+
+  &::before {
+    color: rgba(255, 255, 255, 0.6);
+  }
+}
+
 .button--primary {
   background-color: $basic-light-color;
+
+  &:hover,
+  &:active {
+    background-color: $accent-color;
+    color: $basic-light-color;
+
+    &::after {
+      background-color: $basic-light-color;
+    }
+
+    &::before {
+      background-color: $accent-color;
+      transform: rotate(45deg);
+    }
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.7);
+
+    &::before {
+      background-color: rgba(49, 109, 194, 0.7);
+    }
+  }
 }
 
 .button--secondary {
   background-color: transparent;
+
+  &:hover,
+  &:active {
+    background-color: $basic-light-color;
+    color: $accent-color;
+    border-color: $basic-light-color;
+
+    &::after {
+      background-color: $accent-color;
+    }
+
+    &::before {
+      background-color: $basic-light-color;
+      transform: rotate(45deg);
+    }
+  }
+
+  &:active {
+    color: rgba(49, 109, 194, 0.7);
+
+    &::before {
+      background-color: rgba(255, 255, 255, 0.7);
+    }
+  }
 }
 
 .button--secondary-light {
