--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -91,6 +91,17 @@
     line-height: 26px;
   }
 
+  &:hover {
+    color: rgba(49, 109, 194, 0.7);
+  }
+
+  &:focus {
+    color: $accent-color;
+  }
+
+  &:active {
+    color: #275699;
+  }
 }
 
 .footer__rights-wrapper {
@@ -131,6 +142,21 @@
     font-size: 14px;
     line-height: 18px;
     order: 2;
+  }
+
+  &:hover {
+    color: rgba(49, 109, 194, 0.7);
+    border-color: rgba(49, 109, 194, 0.7);
+  }
+
+  &:focus {
+    color: $accent-color;
+    border-color: $accent-color;
+  }
+
+  &:active {
+    color: #275699;
+    border-color: #275699;
   }
 }
 
