--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -38,13 +38,13 @@
   @media (max-width: $mobile-width-max) {
     padding: 36px 15px;
     width: $mobile-content-width;
-    gap: 8px;
+    gap: 15px;
   }
 
   @media (min-width: $tablet-width-min) {
     padding: 55px 80px 60px 80px;
     width: 510px;
-    gap: 12px;
+    gap: 20px;
   }
 }
 
@@ -101,7 +101,7 @@
   color: $basic-dark-color;
   align-self: center;
   text-align: center;
-  margin-bottom: 17px;
+  margin-bottom: 10px;
 
   @media (max-width: $mobile-width-max) {
     width: 220px;
@@ -121,9 +121,15 @@
   }
 }
 
+.modal__input-wrapper { // обертка нужна для
+  @include flex(column, flex-start, flex-start);
+  width: 100%;
+  gap: 12px;
+}
+
 .modal__label {
-  margin-bottom: 2px;
   color: rgba(72, 72, 72, 0.8);
+  order: 1;
 
   @media (max-width: $mobile-width-max) {
     font-size: 14px;
@@ -148,6 +154,7 @@
   border-radius: 8px;
   border: 1px solid rgba(72, 72, 72, 0.3);
   background-color: transparent;
+  order: 2;
 
   @media (max-width: $mobile-width-max) {
     margin-bottom: 7px;
@@ -158,23 +165,30 @@
     margin-bottom: 8px;
     height: 48px;
   }
+
+  &:hover,
+  &:active,
+  &:focus {
+    border-color: $basic-dark-color;
+  }
+
+  &:disabled {
+    border-color: rgba(169, 175, 183, 0.5);
+    background-color: rgba(169, 175, 183, 0.2);
+  }
 }
 
-// кастомный select
-.modal__option {
-  @media (max-width: $mobile-width-max) {}
-
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {}
-
-  @media (min-width: $desktop-width-min) {}
-}
-
-.form__input--city {
-  height: 52px;
-  padding: 16px 17px;
+.modal__input:disabled ~ .modal__label {
+    color: rgba(169, 175, 183, 0.6);
 }
 
 // кастомный checkbox
+.modal__checkbox-wrapper {
+  @include flex(row, flex-start, center);
+
+  margin-bottom: 10px;
+}
+
 .modal__label--checkbox {
   position: relative;
   margin: 0;
@@ -244,9 +258,7 @@
 
 // кнопка "отправить"
 .modal__send {
-
   @media (max-width: $mobile-width-max) {
-    margin-top: 17px;
     padding: 14px 21px 14px 74px;
     width: 260px;
     height: 42px;
