--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,7 @@
 @import "blocks/social-list.scss";
 @import "blocks/modal.scss";
 @import "blocks/overlay.scss";
+@import "blocks/custom-select.scss";
 @import "blocks/page-body.scss";
 @import "blocks/header.scss";
 @import "blocks/hero.scss";
